--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ services:
     - docker
 
 before_install:
-    - docker build -t nanda1995/docker-CI -f Dockerfile.dev .
+    - docker build -t nanda1995/docker-ci -f Dockerfile.dev .
 
 script:
-    - docker run -e CI=true nanda1995/docker-CI npm run test
+    - docker run -e CI=true nanda1995/docker-ci npm run test
